--- a/bitcoind-create-wallet-without-private-keys-bitcoin.html
+++ b/bitcoind-create-wallet-without-private-keys-bitcoin.html
@@ -289,6 +289,8 @@ We could see the new associated address using getaddressinfo command.<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest updated articles</h4>
 <ul>
 
+<li><a href="/debian-distro.html">Debian related articles</a></li>
+
 <li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
 
 <li><a href="/quotes-interesting.html">Interesting Quotes</a></li>
@@ -296,8 +298,6 @@ We could see the new associated address using getaddressinfo command.<br>
 <li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
 
 <li><a href="/cryptocoins.html">Cryptocoins</a></li>
-
-<li><a href="/shell-scripting.html">Shell Script Programming</a></li>
 
 </ul>
 </div> <!-- sidebar last updated -->
