--- a/commands-linux-system-administrators-useful.html
+++ b/commands-linux-system-administrators-useful.html
@@ -335,6 +335,8 @@ curl vs wget:<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest updated articles</h4>
 <ul>
 
+<li><a href="/debian-distro.html">Debian related articles</a></li>
+
 <li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
 
 <li><a href="/quotes-interesting.html">Interesting Quotes</a></li>
@@ -342,8 +344,6 @@ curl vs wget:<br>
 <li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
 
 <li><a href="/cryptocoins.html">Cryptocoins</a></li>
-
-<li><a href="/shell-scripting.html">Shell Script Programming</a></li>
 
 </ul>
 </div> <!-- sidebar last updated -->
