--- a/scheme-language.html
+++ b/scheme-language.html
@@ -174,6 +174,8 @@ or<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest updated articles</h4>
 <ul>
 
+<li><a href="/debian-distro.html">Debian related articles</a></li>
+
 <li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
 
 <li><a href="/quotes-interesting.html">Interesting Quotes</a></li>
@@ -181,8 +183,6 @@ or<br>
 <li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
 
 <li><a href="/cryptocoins.html">Cryptocoins</a></li>
-
-<li><a href="/shell-scripting.html">Shell Script Programming</a></li>
 
 </ul>
 </div> <!-- sidebar last updated -->
