--- a/xbindkeys-grab-keys-X.html
+++ b/xbindkeys-grab-keys-X.html
@@ -164,6 +164,8 @@ When HUP signal is send to xbindkeys, changes in $HOME/.xbindkeysrc take effect 
 <div class="sidebar_last"><h4 class="sidebar_title">Latest updated articles</h4>
 <ul>
 
+<li><a href="/debian-distro.html">Debian related articles</a></li>
+
 <li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
 
 <li><a href="/quotes-interesting.html">Interesting Quotes</a></li>
@@ -171,8 +173,6 @@ When HUP signal is send to xbindkeys, changes in $HOME/.xbindkeysrc take effect 
 <li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
 
 <li><a href="/cryptocoins.html">Cryptocoins</a></li>
-
-<li><a href="/shell-scripting.html">Shell Script Programming</a></li>
 
 </ul>
 </div> <!-- sidebar last updated -->
