b/f Fix emacs links.

--- a/C-language.html
+++ b/C-language.html
@@ -200,7 +200,7 @@ Bad code is also interesting...<br>
 <br>
 <br>
 <h4>Other</h4><br>
-<a href="/emacs.html-c-tags-etags.html">Tags for C language in emacs</a><br>
+<a href="/emacs-c-tags-etags.html">Tags for C language in emacs</a><br>
 <br>
 <br>
 <br>
