--- a/emacs-c-tags-etags.html
+++ b/emacs-c-tags-etags.html
@@ -94,7 +94,7 @@ or<br>
 <br>
 <br>
 <h4>Reference</h4><br>
-<a href="https://www.gnu.org/software/emacs.html/manual/html_node/emacs.html/Tags-Tables.html">https://www.gnu.org/software/emacs.html/manual/html_node/emacs.html/Tags-Tables.html</a><br>
+<a href="https://www.gnu.org/software/emacs/manual/html_node/emacs/Tags-Tables.html">https://www.gnu.org/software/emacs/manual/html_node/emacs/Tags-Tables.html</a><br>
 <br>
 </div> <!-- content -->
 </div><!-- content_page -->
