--- a/emacs.html
+++ b/emacs.html
@@ -62,7 +62,7 @@
 
 <div id="content_page" class="clearfix">
 <div id="page_title"><h3>Emacs editor</h3></div>
-<div id="content">Emacs is a customizable and extensible editor (some people says it is almost an operating system... :-D )<br/><br/><a href="https://www.gnu.org/software/emacs.html/">GNU Emacs site</a><br/><br/><br/><br/><a href="https://www.gnu.org/software/emacs.html/manual/html_node/emacs.html/index.html">GNU Emacs Manual</a><br/><br/><a href="https://www.gnu.org/software/emacs.html/manual/html_node/eintr/index.html">An Introduction to Programming in Emacs Lisp</a><br/><br/><a href="https://www.gnu.org/software/emacs.html/manual/html_node/elisp/index.html">Emacs Lisp reference Manual</a><br/><br/><a href="http://emacs.htmlwiki.org/">Emacs Wiki</a><br/><br/><br/><a href="/emacs.html-c-tags-etags.html">Tags for C language in emacs</a><br/><br/><br/></div> <!-- content -->
+<div id="content">Emacs is a customizable and extensible editor (some people says it is almost an operating system... :-D )<br/><br/><a href="https://www.gnu.org/software/emacs/">GNU Emacs site</a><br/><br/><br/><br/><a href="https://www.gnu.org/software/emacs/manual/html_node/emacs/index.html">GNU Emacs Manual</a><br/><br/><a href="https://www.gnu.org/software/emacs/manual/html_node/eintr/index.html">An Introduction to Programming in Emacs Lisp</a><br/><br/><a href="https://www.gnu.org/software/emacs/manual/html_node/elisp/index.html">Emacs Lisp reference Manual</a><br/><br/><a href="http://emacswiki.org/">Emacs Wiki</a><br/><br/><br/><a href="/emacs-c-tags-etags.html">Tags for C language in emacs</a><br/><br/><br/></div> <!-- content -->
 </div><!-- content_page -->
 
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
