Set Google tag manager.

--- a/r-language-graphics-cheat-sheet.html
+++ b/r-language-graphics-cheat-sheet.html
@@ -12,17 +12,20 @@
 	
 	<title>R Graphics: Cheat-Sheet - Vicente Hernando</title>
 	
-	<script data-ad-client="ca-pub-5012168473890397" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script type="text/javascript" language="javascript">
-	  // Supply ads personalization default for EEA readers
-	  // See https://support.google.com/admanager/answer/7678538?authuser=0
-	  adsbygoogle = window.adsbygoogle || [];
-	  if (typeof adsbygoogle.requestNonPersonalizedAds === 'undefined') {
-		  adsbygoogle.requestNonPersonalizedAds = 1;
-	  }
-	</script>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WNT6FCF');</script>
+<!-- End Google Tag Manager -->
   </head>
   <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNT6FCF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <script defer='' src="/static/cookienotice.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function(event) {
@@ -34,7 +37,6 @@
     });
   </script>
 
-	
 	
 	<div id="header">
 	  
