Delete .html from URLs.

--- a/C-tips.html
+++ b/C-tips.html
@@ -6,7 +6,7 @@
 	
 	<link rel="shortcut icon"  href="/static/favicon.ico"/>
 	<link rel="stylesheet" href="/static/style.css"/>
-	<link rel="canonical" href="https://vhernando.github.io/C-tips.html"/>
+	<link rel="canonical" href="https://vhernando.github.io/C-tips"/>
 	
 
 	
@@ -49,22 +49,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="sidebar_first"><h4 class="sidebar_title">Popular articles</h4>
 <ul>
 
-<li><a href="/android-how-to-install-adb-fastboot-debian.html">Android: How to install adb and fastboot in Debian</a></li>
+<li><a href="/android-how-to-install-adb-fastboot-debian">Android: How to install adb and fastboot in Debian</a></li>
 
-<li><a href="/sqlite3-cheat-sheet.html">SQLite3 Cheat Sheet</a></li>
+<li><a href="/sqlite3-cheat-sheet">SQLite3 Cheat Sheet</a></li>
 
-<li><a href="/sqlite3-cross-compile-arm-howto.html">How to cross-compile SQLite3 for ARM architecture</a></li>
+<li><a href="/sqlite3-cross-compile-arm-howto">How to cross-compile SQLite3 for ARM architecture</a></li>
 
-<li><a href="/benchmark-hard-disk-linux-hdparm-dd.html">How to Benchmark Hard Disks using hdparm and dd (linux)</a></li>
+<li><a href="/benchmark-hard-disk-linux-hdparm-dd">How to Benchmark Hard Disks using hdparm and dd (linux)</a></li>
 
-<li><a href="/archlinux-install-usb-from-debian-existing-linux.html">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li>
+<li><a href="/archlinux-install-usb-from-debian-existing-linux">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li>
 
 </ul>
 </div>
 
 <div id="content_page" class="clearfix">
 <div id="page_title"><h3>C tips</h3></div>
-<div id="content"><br><h4>Readability</h4><br>Most important quality of source code is <b>readability</b>. More important than efficiency.<br><br><br><h4>Avoid too long lines</h4><br><b>Limit lines</b> in your program <b>to 80 characters long</b> whenever possible.<br><br>It improves readability.<br><br>If your lines tend to be longer than that think of redesigning your program.<br><br><br><h4>Naming types using _t suffix</h4><br>POSIX standard reserves <b>_t</b> suffix for itself, so naming types using _t suffix is discouraged.<br><br><code>typedef struct { whatever } my_struct_t;</code>  <b>Discouraged</b><br><br><br><h4>Using booleans in C</h4><br><a href="/C-using-boolean.html">Using booleans in C</a><br><br><br><h4>Sequence points</h4><br>Sequence point is a point in a computer program where all side effects are guaranteed to have been performed.<br><br><a href="http://c-faq.com/expr/seqpoints.html">C FAQ: What is a sequence point?</a><br><br><a href="https://en.wikipedia.org/wiki/Sequence_point">Sequence point (wikipedia)</a><br><br><br></div> <!-- content -->
+<div id="content"><br><h4>Readability</h4><br>Most important quality of source code is <b>readability</b>. More important than efficiency.<br><br><br><h4>Avoid too long lines</h4><br><b>Limit lines</b> in your program <b>to 80 characters long</b> whenever possible.<br><br>It improves readability.<br><br>If your lines tend to be longer than that think of redesigning your program.<br><br><br><h4>Naming types using _t suffix</h4><br>POSIX standard reserves <b>_t</b> suffix for itself, so naming types using _t suffix is discouraged.<br><br><code>typedef struct { whatever } my_struct_t;</code>  <b>Discouraged</b><br><br><br><h4>Using booleans in C</h4><br><a href="/C-using-boolean">Using booleans in C</a><br><br><br><h4>Sequence points</h4><br>Sequence point is a point in a computer program where all side effects are guaranteed to have been performed.<br><br><a href="http://c-faq.com/expr/seqpoints.html">C FAQ: What is a sequence point?</a><br><br><a href="https://en.wikipedia.org/wiki/Sequence_point">Sequence point (wikipedia)</a><br><br><br></div> <!-- content -->
 </div><!-- content_page -->
 
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
@@ -89,22 +89,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="sidebar_last"><h4 class="sidebar_title">Recommended articles</h4>
 
 <ul>
-<li><a href="/bitcoin-wallet-encrypt-decrypt-cipher.html">How to encrypt and decrypt your Bitcoin wallet</a></li>
-<li><a href="/bitcoin-core-node-build-sources-debian.html">How to build BitcoinCore from sources in Debian</a></li>
-<li><a href="/pacman-cheat-sheet-archlinux.html">Pacman cheat sheet (Arch Linux)</a></li>
-<li><a href="/install-raspbian-lite-raspberry-pi-3-model-b.html">How to install Raspbian Lite in Raspberry Pi 3 model B</a></li>
-<li><a href="/run-bitcoin-node-debian-how-to.html">How to run a Bitcoin node in Debian</a></li>
-<li><a href="/android-apk-app-extract-install.html">Android aplication: How to extract an APK file and reinstall it</a></li>
-<li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
-<li><a href="/factorial-function-scheme.html">Scheme: factorial function</a></li>
-<li><a href="/ratpoison-window-manager.html">Ratpoison window manager</a></li>
-<li><a href="/directfb-generate-api-documentation-html.html">How to generate API reference documentation for DirectFB</a></li>
-<li><a href="/xbindkeys-grab-keys-X.html">xbindkeys: how to bind keys to commands (X window)</a></li>
-<li><a href="/bitcoind-create-wallet-without-private-keys-bitcoin.html">bitcoind: How to create a wallet with no private keys</a></li>
-<li><a href="/imagemagick-intro-convert-montage-identify.html">ImageMagick: Introduction (identify, convert, montage)</a></li>
-<li><a href="/keyboard-shorcuts-bash-readline-default.html">Bash shell: default keyboard shortcuts</a></li>
-<li><a href="/git-command-quick-reminder.html">Git Command Quick Reminder</a></li>
-<li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
+<li><a href="/bitcoin-wallet-encrypt-decrypt-cipher">How to encrypt and decrypt your Bitcoin wallet</a></li>
+<li><a href="/bitcoin-core-node-build-sources-debian">How to build BitcoinCore from sources in Debian</a></li>
+<li><a href="/pacman-cheat-sheet-archlinux">Pacman cheat sheet (Arch Linux)</a></li>
+<li><a href="/install-raspbian-lite-raspberry-pi-3-model-b">How to install Raspbian Lite in Raspberry Pi 3 model B</a></li>
+<li><a href="/run-bitcoin-node-debian-how-to">How to run a Bitcoin node in Debian</a></li>
+<li><a href="/android-apk-app-extract-install">Android aplication: How to extract an APK file and reinstall it</a></li>
+<li><a href="/ffmpeg-commands">FFmpeg commands</a></li>
+<li><a href="/factorial-function-scheme">Scheme: factorial function</a></li>
+<li><a href="/ratpoison-window-manager">Ratpoison window manager</a></li>
+<li><a href="/directfb-generate-api-documentation-html">How to generate API reference documentation for DirectFB</a></li>
+<li><a href="/xbindkeys-grab-keys-X">xbindkeys: how to bind keys to commands (X window)</a></li>
+<li><a href="/bitcoind-create-wallet-without-private-keys-bitcoin">bitcoind: How to create a wallet with no private keys</a></li>
+<li><a href="/imagemagick-intro-convert-montage-identify">ImageMagick: Introduction (identify, convert, montage)</a></li>
+<li><a href="/keyboard-shorcuts-bash-readline-default">Bash shell: default keyboard shortcuts</a></li>
+<li><a href="/git-command-quick-reminder">Git Command Quick Reminder</a></li>
+<li><a href="/rpm-yum-quick-reference">RPM Package Management Quick Reference</a></li>
 </ul>
 </div> <!-- sidebar recommended -->
 
