--- a/other-articles.html
+++ b/other-articles.html
@@ -6,7 +6,7 @@
 	
 	<link rel="shortcut icon"  href="/static/favicon.ico"/>
 	<link rel="stylesheet" href="/static/style.css"/>
-	<link rel="canonical" href="https://vhernando.github.io/other-articles.html"/>
+	<link rel="canonical" href="https://vhernando.github.io/other-articles"/>
 	
 
 	
@@ -49,15 +49,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="sidebar_first"><h4 class="sidebar_title">Popular articles</h4>
 <ul>
 
-<li><a href="/android-how-to-install-adb-fastboot-debian.html">Android: How to install adb and fastboot in Debian</a></li>
+<li><a href="/android-how-to-install-adb-fastboot-debian">Android: How to install adb and fastboot in Debian</a></li>
 
-<li><a href="/sqlite3-cheat-sheet.html">SQLite3 Cheat Sheet</a></li>
+<li><a href="/sqlite3-cheat-sheet">SQLite3 Cheat Sheet</a></li>
 
-<li><a href="/sqlite3-cross-compile-arm-howto.html">How to cross-compile SQLite3 for ARM architecture</a></li>
+<li><a href="/sqlite3-cross-compile-arm-howto">How to cross-compile SQLite3 for ARM architecture</a></li>
 
-<li><a href="/benchmark-hard-disk-linux-hdparm-dd.html">How to Benchmark Hard Disks using hdparm and dd (linux)</a></li>
+<li><a href="/benchmark-hard-disk-linux-hdparm-dd">How to Benchmark Hard Disks using hdparm and dd (linux)</a></li>
 
-<li><a href="/archlinux-install-usb-from-debian-existing-linux.html">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li>
+<li><a href="/archlinux-install-usb-from-debian-existing-linux">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li>
 
 </ul>
 </div>
@@ -67,28 +67,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="content">Other posts:<br>
 <br>
 <ul><br>
-<li><a href="/sqlite3-cheat-sheet.html">sqlite3 cheat sheet</a></li><br>
-<li><a href="/ratpoison-window-manager.html">Ratpoison window manager</a></li><br>
-<li><a href="/bash-job-control.html">Bash Job Control</a></li><br>
-<li><a href="/imagemagick-intro-convert-montage-identify.html">ImageMagick: Introduction (identify, convert, montage)</a></li><br>
-<li><a href="/change-DPI-X-window.html">Change Dots per Inch - X Window</a></li><br>
-<li><a href="/keyboard-shorcuts-bash-readline-default.html">Bash shell: default keyboard shortcuts</a></li><br>
-<li><a href="/directfb-generate-api-documentation-html.html">How to generate API reference documentation for DirectFB</a></li><br>
-<li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li><br>
-<li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li><br>
-<li><a href="/quotes-interesting.html">Interesting Quotes</li><br>
-<li><a href="/network-standards-tutorials.html">Network related Standards and Tutorials</a></li><br>
-<li><a href="/commands-linux-system-administrators-useful.html">Useful Linux Commands for System Administrators</a></li><br>
-<li><a href="/archlinux-distro-introduction.html">Arch Linux distro - Introduction</a></li><br>
-<li><a href="/archlinux-install-usb-from-debian-existing-linux.html">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li><br>
-<li><a href="/live-healthier-longer.html">How to live healthier and longer</a></li><br>
-<li><a href="/vi-editor-basic-keystrokes.html">Vi editor basic keystrokes</a></li><br>
-<li><a href="/xbindkeys-grab-keys-X.html">xbindkeys: how to bind keys to commands (X window)</a></li><br>
-<li><a href="/fire-financial-independence-retire-early.html">FIRE Financial Independence, Retire Early</a></li><br>
-<li><a href="/gnu-screen-quick-guide-cheatsheet.html">GNU Screen : Quick Reference : Cheatsheet</a></li><br>
-<li><a href="/gdb-gnu-debugger-cheatsheet.html">GDB cheatsheet</a></li><br>
-<li><a href="/badblocks-e2fsck-scan-harddisk-howto.html">How to scan a hard disk partition using badblocks (or e2fsck)</a></li><br>
-<li><a href="/bash-shell-redirections.html">Bash redirections</a></li><br>
+<li><a href="/sqlite3-cheat-sheet">sqlite3 cheat sheet</a></li><br>
+<li><a href="/ratpoison-window-manager">Ratpoison window manager</a></li><br>
+<li><a href="/bash-job-control">Bash Job Control</a></li><br>
+<li><a href="/imagemagick-intro-convert-montage-identify">ImageMagick: Introduction (identify, convert, montage)</a></li><br>
+<li><a href="/change-DPI-X-window">Change Dots per Inch - X Window</a></li><br>
+<li><a href="/keyboard-shorcuts-bash-readline-default">Bash shell: default keyboard shortcuts</a></li><br>
+<li><a href="/directfb-generate-api-documentation-html">How to generate API reference documentation for DirectFB</a></li><br>
+<li><a href="/ffmpeg-commands">FFmpeg commands</a></li><br>
+<li><a href="/rpm-yum-quick-reference">RPM Package Management Quick Reference</a></li><br>
+<li><a href="/quotes-interesting">Interesting Quotes</li><br>
+<li><a href="/network-standards-tutorials">Network related Standards and Tutorials</a></li><br>
+<li><a href="/commands-linux-system-administrators-useful">Useful Linux Commands for System Administrators</a></li><br>
+<li><a href="/archlinux-distro-introduction">Arch Linux distro - Introduction</a></li><br>
+<li><a href="/archlinux-install-usb-from-debian-existing-linux">How to install Arch Linux on a USB key from an existing Linux (Debian)</a></li><br>
+<li><a href="/live-healthier-longer">How to live healthier and longer</a></li><br>
+<li><a href="/vi-editor-basic-keystrokes">Vi editor basic keystrokes</a></li><br>
+<li><a href="/xbindkeys-grab-keys-X">xbindkeys: how to bind keys to commands (X window)</a></li><br>
+<li><a href="/fire-financial-independence-retire-early">FIRE Financial Independence, Retire Early</a></li><br>
+<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li><br>
+<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li><br>
+<li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li><br>
+<li><a href="/bash-shell-redirections">Bash redirections</a></li><br>
 </ul></div> <!-- content -->
 </div><!-- content_page -->
 
@@ -114,22 +114,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="sidebar_last"><h4 class="sidebar_title">Recommended articles</h4>
 
 <ul>
-<li><a href="/bitcoin-wallet-encrypt-decrypt-cipher.html">How to encrypt and decrypt your Bitcoin wallet</a></li>
-<li><a href="/bitcoin-core-node-build-sources-debian.html">How to build BitcoinCore from sources in Debian</a></li>
-<li><a href="/pacman-cheat-sheet-archlinux.html">Pacman cheat sheet (Arch Linux)</a></li>
-<li><a href="/install-raspbian-lite-raspberry-pi-3-model-b.html">How to install Raspbian Lite in Raspberry Pi 3 model B</a></li>
-<li><a href="/run-bitcoin-node-debian-how-to.html">How to run a Bitcoin node in Debian</a></li>
-<li><a href="/android-apk-app-extract-install.html">Android aplication: How to extract an APK file and reinstall it</a></li>
-<li><a href="/ffmpeg-commands.html">FFmpeg commands</a></li>
-<li><a href="/factorial-function-scheme.html">Scheme: factorial function</a></li>
-<li><a href="/ratpoison-window-manager.html">Ratpoison window manager</a></li>
-<li><a href="/directfb-generate-api-documentation-html.html">How to generate API reference documentation for DirectFB</a></li>
-<li><a href="/xbindkeys-grab-keys-X.html">xbindkeys: how to bind keys to commands (X window)</a></li>
-<li><a href="/bitcoind-create-wallet-without-private-keys-bitcoin.html">bitcoind: How to create a wallet with no private keys</a></li>
-<li><a href="/imagemagick-intro-convert-montage-identify.html">ImageMagick: Introduction (identify, convert, montage)</a></li>
-<li><a href="/keyboard-shorcuts-bash-readline-default.html">Bash shell: default keyboard shortcuts</a></li>
-<li><a href="/git-command-quick-reminder.html">Git Command Quick Reminder</a></li>
-<li><a href="/rpm-yum-quick-reference.html">RPM Package Management Quick Reference</a></li>
+<li><a href="/bitcoin-wallet-encrypt-decrypt-cipher">How to encrypt and decrypt your Bitcoin wallet</a></li>
+<li><a href="/bitcoin-core-node-build-sources-debian">How to build BitcoinCore from sources in Debian</a></li>
+<li><a href="/pacman-cheat-sheet-archlinux">Pacman cheat sheet (Arch Linux)</a></li>
+<li><a href="/install-raspbian-lite-raspberry-pi-3-model-b">How to install Raspbian Lite in Raspberry Pi 3 model B</a></li>
+<li><a href="/run-bitcoin-node-debian-how-to">How to run a Bitcoin node in Debian</a></li>
+<li><a href="/android-apk-app-extract-install">Android aplication: How to extract an APK file and reinstall it</a></li>
+<li><a href="/ffmpeg-commands">FFmpeg commands</a></li>
+<li><a href="/factorial-function-scheme">Scheme: factorial function</a></li>
+<li><a href="/ratpoison-window-manager">Ratpoison window manager</a></li>
+<li><a href="/directfb-generate-api-documentation-html">How to generate API reference documentation for DirectFB</a></li>
+<li><a href="/xbindkeys-grab-keys-X">xbindkeys: how to bind keys to commands (X window)</a></li>
+<li><a href="/bitcoind-create-wallet-without-private-keys-bitcoin">bitcoind: How to create a wallet with no private keys</a></li>
+<li><a href="/imagemagick-intro-convert-montage-identify">ImageMagick: Introduction (identify, convert, montage)</a></li>
+<li><a href="/keyboard-shorcuts-bash-readline-default">Bash shell: default keyboard shortcuts</a></li>
+<li><a href="/git-command-quick-reminder">Git Command Quick Reminder</a></li>
+<li><a href="/rpm-yum-quick-reference">RPM Package Management Quick Reference</a></li>
 </ul>
 </div> <!-- sidebar recommended -->
 
