Update latest created articles to URLs without .html

--- a/doxygen-syntax-howto-document.html
+++ b/doxygen-syntax-howto-document.html
@@ -325,17 +325,17 @@ E.g: reference to my_group group:<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
-<li><a href="/perl-language.html">Perl language</a></li>
+<li><a href="/perl-language">Perl language</a></li>
 
-<li><a href="/bash-shell-redirections.html">Bash redirections</a></li>
+<li><a href="/bash-shell-redirections">Bash redirections</a></li>
 
-<li><a href="/badblocks-e2fsck-scan-harddisk-howto.html">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
+<li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
 
-<li><a href="/gdb-gnu-debugger-cheatsheet.html">GDB cheatsheet</a></li>
+<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
 
-<li><a href="/gnu-screen-quick-guide-cheatsheet.html">GNU Screen : Quick Reference : Cheatsheet</a></li>
+<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
 
-<li><a href="/javascript-language-ecmascript.html">JavaScript Language</a></li>
+<li><a href="/javascript-language-ecmascript">JavaScript Language</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
