--- a/gnu-screen-quick-guide-cheatsheet.html
+++ b/gnu-screen-quick-guide-cheatsheet.html
@@ -140,6 +140,8 @@ When flow control is enabled, to send C-s and C-q key combinations to current wi
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
+
 <li><a href="/perl-language">Perl language</a></li>
 
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
@@ -149,8 +151,6 @@ When flow control is enabled, to send C-s and C-q key combinations to current wi
 <li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
 
 <li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
-
-<li><a href="/javascript-language-ecmascript">JavaScript Language</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
