--- a/bitcoin-core-node-build-sources-debian.html
+++ b/bitcoin-core-node-build-sources-debian.html
@@ -219,6 +219,8 @@ Now you can run your BitcoinCore node.<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
+
 <li><a href="/perl-language">Perl language</a></li>
 
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
@@ -228,8 +230,6 @@ Now you can run your BitcoinCore node.<br>
 <li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
 
 <li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
-
-<li><a href="/javascript-language-ecmascript">JavaScript Language</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
