--- a/bitcoind-create-wallet-without-private-keys-bitcoin.html
+++ b/bitcoind-create-wallet-without-private-keys-bitcoin.html
@@ -272,6 +272,8 @@ We could see the new associated address using getaddressinfo command.<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
+
 <li><a href="/perl-language">Perl language</a></li>
 
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
@@ -281,8 +283,6 @@ We could see the new associated address using getaddressinfo command.<br>
 <li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
 
 <li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
-
-<li><a href="/javascript-language-ecmascript">JavaScript Language</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
