--- a/ffmpeg-commands.html
+++ b/ffmpeg-commands.html
@@ -209,6 +209,8 @@ Trim a file starting at 4 minutes 41 seconds point and finish after a duration o
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
+
 <li><a href="/perl-language">Perl language</a></li>
 
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
@@ -218,8 +220,6 @@ Trim a file starting at 4 minutes 41 seconds point and finish after a duration o
 <li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
 
 <li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
-
-<li><a href="/javascript-language-ecmascript">JavaScript Language</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
