python-language.html: link to article about Flask8.

--- a/python-language.html
+++ b/python-language.html
@@ -103,9 +103,9 @@ Extending and embedding the python interpreter:<br>
 <br>
 <a href="https://www.python.org/dev/peps/pep-0008/">PEP 8 -- Style Guide for Python Code</a><br>
 <br>
-We can use <b>pep8</b> tool to check style of python code:<br>
-<code>$ pip install pep8</code><br>
-<code>$ pep8 code_to_test.py</code><br>
+We can use <b>flake8</b> tool to check style of python code:<br>
+<a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a><br>
+<br>
 <br>
 <br>
 <a href="http://www.tutorialspoint.com/python/python_strings.htm">Python Strings Tutorial</a><br>
